fix navigation on tablet view

--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,11 @@ Medium devices (640px and larger)
   .navtoggle li:not(:last-child) {
     display: inline-block;
   }
+
+  .navtoggle li:last-child {
+  display: none;
+  }
+}
 }
 
 /* ==============================
